--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,17 @@
 /.fleet
 /.idea
 /.vscode
+
+/web/.DS_Store
+/web/node_modules
+/web/build
+/web/.svelte-kit
+/web/package
+/web/.env
+/web/.env.*
+!/web/.env.example
+/web/.vercel
+/web/.output
+/web/vite.config.js.timestamp-*
+/web/vite.config.ts.timestamp-*
+
