--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,9 @@
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"sass": "^1.68.0",
 		"svelte": "^4.0.5",
+		"svelte-preprocess": "^5.0.4",
 		"vite": "^4.4.2",
 		"vitest": "^0.34.0"
 	},
