fix: match network name 3d7d22cf24bb6814b726333ae5916cb6fe1802a6

--- a/web/docker-compose.dev.yml
+++ b/web/docker-compose.dev.yml
@@ -13,7 +13,7 @@ services:
       - ./:/usr/src/app
       - /usr/src/app/node_modules
     networks:
-      net-certrust:
+      net-dev-certrust-web:
 
 networks:
   net-dev-certrust-web:
