--- a/web/package.json
+++ b/web/package.json
@@ -1,22 +1,23 @@
 {
-	"name": "certrust-web",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"test": "vitest"
-	},
-	"devDependencies": {
-		"@fontsource/fira-mono": "^4.5.10",
-		"@neoconfetti/svelte": "^1.0.0",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
-		"sass": "^1.68.0",
-		"svelte": "^4.0.5",
-		"svelte-preprocess": "^5.0.4",
-		"vite": "^4.4.2",
-		"vitest": "^0.34.0"
-	},
-	"type": "module"
+  "name": "web",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test:unit": "vitest"
+  },
+  "dependencies": {
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.3.4",
+    "@vue/test-utils": "^2.4.1",
+    "jsdom": "^22.1.0",
+    "sass": "^1.68.0",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.4"
+  }
 }
