--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "moment": "^2.29.4",
+    "sweetalert2": "^11.7.31",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
