--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -5,10 +5,12 @@ COPY . .
 
 # build stage
 FROM develop-stage as build-stage
-RUN npm build
+ENV NODE_ENV=production
+RUN npm run build
 
 # production stage
-#FROM nginx:1.15.7-alpine as production-stage
-#COPY --from=build-stage /app/dist /usr/share/nginx/html
-#EXPOSE 80
-#CMD ["nginx", "-g", "daemon off;"]
+FROM nginx:1.25.2-alpine as production-stage
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=build-stage /usr/src/app/dist /usr/share/nginx/html
+EXPOSE 3000
+CMD ["nginx", "-g", "daemon off;"]
