--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,4 +1,17 @@
 services:
+  api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    container_name: ct-certrust-api
+    tty: true
+    environment:
+      SERVICE_NAME: api
+      SERVICE_TAGS: dev
+    working_dir: /var/www/html
+    networks:
+      - net-certrust
+
   client:
     build:
       context: ./web
@@ -6,20 +19,48 @@ services:
       target: production-stage
       tags:
         - certrust-client:latest
-    container_name: client
+    container_name: ct-certrust-client
     networks:
       - net-certrust
 
-  web-server:
-    image: nginx:1.25.2-alpine
-    container_name: web-server
+  database:
+    image: mariadb:11.1.2
+    container_name: ct-certrust-database
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: certrust
+      MYSQL_USER: certrust
+      MYSQL_PASSWORD: certrust
+    healthcheck:
+      test: [ "CMD", "healthcheck.sh", "--su-mysql", "--connect", "--innodb_initialized" ]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+    volumes:
+      - vol-certrust-database:/var/lib/mysql
+    networks:
+      - net-certrust
+
+  webserver:
+    build:
+      context: ./
+      dockerfile: Dockerfile
+    container_name: ct-certrust-webserver
+    depends_on:
+      api:
+        condition: service_started
+      client:
+        condition: service_started
+      database:
+        condition: service_healthy
     tty: true
     ports:
       - 80:80
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - net-certrust
 
 networks:
   net-certrust:
+
+volumes:
+  vol-certrust-database:
