--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,9 @@
 upstream frontend {
-  server client:3000;
+  server ct-certrust-client:3000;
+}
+
+upstream backend {
+  server api:9000;
 }
 
 server {
@@ -11,5 +15,21 @@ server {
 
   location / {
       proxy_pass http://frontend;
+  }
+
+  location /api {
+        try_files $uri $uri/ /index.php?$query_string;
+        gzip_static on;
+  }
+
+  # Nginx Pass requests to PHP-FPM
+  location ~ \.php$ {
+      #try_files $uri =404;
+      fastcgi_split_path_info ^(.+\.php)(/.+)$;
+      fastcgi_pass backend;
+      fastcgi_index index.php;
+      include fastcgi_params;
+      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+      fastcgi_param PATH_INFO $fastcgi_path_info;
   }
 }
