docs: update informations

--- a/api/composer.json
+++ b/api/composer.json
@@ -6,8 +6,8 @@
     "license": "GPL-3.0-only",
     "authors": [
         {
-            "name": "EnzoGzz",
-            "homepage": "https://github.com/EnzoGzz",
+            "name": "Iceish",
+            "homepage": "https://github.com/Iceish",
             "role": "Owner, Developer"
         }
     ],
